grammar.js
    source_file: ($) => seq(repeat($.import), repeat($._module_item)),

    /* Imports */

    _module_item: ($) =>
      choice(
        $.primitive,
        alias($._constant, $.global_constant),
        $.native_function,
        $.asm_function,
        alias($._function, $.global_function),
        $.struct,
        $.message,
        $.contract,
        $.trait,
      ),

    /* Built-in declarations */

    _function_definition: ($) =>
      seq(
        field("attributes", optional($.function_attributes)),
        "fun",
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        optional(
          seq(
            ":",
            field("result", $._type),
            field("tlb", optional($.tlb_serialization)),
          ),
        ),
        field("body", alias($.block_statement, $.function_body)),
      ),

    function_attributes: ($) =>
      repeat1(
        choice(
          $.get_attribute,
          "mutates",
          "extends",
          "virtual",
          "override",
          "inline",
          "abstract",
        ),
      ),

    get_attribute: ($) =>
      seq("get", optional(seq("(", field("value", $._expression), ")"))),

    parameter_list: ($) => seq("(", commaSepWithTrailing($.parameter), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type),
        field("tlb", optional($.tlb_serialization)),
      ),

    /* Structs, Messages */

    storage_constant: ($) =>
      seq(
        field("attributes", optional($.constant_attributes)),
        "const",
        field("name", $.identifier),
        ":",
        field("type", $._type),
        optional(seq("=", field("value", $._expression))),
      ),

    storage_variable: ($) =>
      seq(field("name", $.identifier), $._field_after_id),

    _field_after_id: ($) =>
      seq(
        ":",
        field("type", $._type),
        field("tlb", optional($.tlb_serialization)),
        optional(seq("=", field("value", $._expression))),
      ),

    /* Contracts, Traits */

    trait: ($) =>
      seq(
        field(
          "attributes",
          optional(alias($.contract_attributes, $.trait_attributes)),
        ),
        "trait",
        field("name", $.identifier),
        field("traits", optional($.trait_list)),
        field("body", $.trait_body),
      ),

    trait_list: ($) => seq("with", commaSepWithTrailing($.identifier)),

    trait_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            seq($._body_item_without_semicolon, ";"),
            $._receiver_function,
            alias($._function_definition, $.storage_function),
          ),
        ),
        optional($._body_item_without_semicolon),
        "}",
      ),

    _body_item_without_semicolon: ($) =>
      choice(
        $.storage_constant,
        $.storage_variable,
        alias($._function_declaration, $.storage_function),
      ),

    _receiver_function: ($) =>
      choice($.receive_function, $.bounced_function, $.external_function),

    return_statement: ($) => seq("return", optional($._expression)),

    expression_statement: ($) => seq($._expression),

    _expression: ($) =>
      choice(
        $.ternary_expression, // ExpressionConditional
        $.binary_expression, // ExpressionBinary
        $.unary_expression, // ExpressionUnary
        // $.unary_suffix_expression, // ExpressionUnarySuffix
        $.value_expression, // ExpressionValue
      ),

    method_call_expression: ($) =>
      prec.right(
        "method_call_expr",
        seq(
          field("object", $.value_expression),
          ".",
          field("name", $.identifier),
          field("arguments", $.argument_list),
        ),
      ),

    field_access_expression: ($) =>
      prec.right(
        "field_access_expr",
        seq(
          field("object", $.value_expression),
          ".",
          field("name", $.identifier),
        ),
      ),

    static_call_expression: ($) =>
      prec.right(
        "static_call_expr",
        seq(field("name", $.identifier), field("arguments", $.argument_list)),
      ),

    argument_list: ($) => seq("(", commaSepWithTrailing($.argument), ")"),

    argument: ($) => field("value", $._expression),

    parenthesized_expression: ($) =>
      prec("parenthesized_expr", seq("(", $._expression, ")")),

    instance_expression: ($) =>
      prec.right(
        "instance_expr",
        seq(
          field("name", $.identifier),
          field("arguments", $.instance_argument_list),
        ),
      ),

    instance_argument_list: ($) =>
      seq("{", commaSepWithTrailing($.instance_argument), "}"),

    instance_argument: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("value", $._expression))),
      ),

    initOf: ($) =>
      seq(
        "initOf",
        field("name", $.identifier),
        field("arguments", $.argument_list),
      ),

    codeOf: ($) => seq("codeOf", field("name", $.identifier)),

    /* Types */

    _type: ($) => choice($.optional_type, $._required_type),

    // NOTE: experimental
    // _type_ascription: ($) =>
    //   seq(":", $._type, optional($.tlb_serialization)),

    // type?+, where each ? is one Maybe in TL-B
    _type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,
    type_identifier: ($) => $._type_identifier,

    /* Serialization to TL-B types and/or Tact-specific annotations */

    tlb_serialization: ($) => seq("as", field("type", $.identifier)),

    /* Identifiers */

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    self: (_) => "self",

    /* Literals */

    map: ($) =>
      prec.right(
        "map_literal",
        seq(
          "map",
          "<",
          field("key", optional($._type)),
          field("tlb_key", optional($.tlb_serialization)),
          optional(","),
          field("value", optional($._type)),
          field("tlb_value", optional($.tlb_serialization)),
          optional(","),
          ">",
          field("body", optional($.map_body)),
        ),
      ),

    map_body: ($) => seq("{", commaSepWithTrailing($.map_field), "}"),

    map_field: ($) =>
      seq(field("key", $._expression), ":", field("value", $._expression)),

    set: ($) =>
      prec.right(
        "map_literal",
        seq(
          "set",
          "<",
          field("type", optional($._type)),
          field("tlb", optional($.tlb_serialization)),
          optional(","),
          ">",
          field("body", optional($.set_body)),
        ),
      ),

    set_body: ($) =>
      seq(
        "{",
        commaSepWithTrailing($._expression),
        "}",
      ),

    string: ($) =>
      seq(
        '"',
        repeat(choice($._non_quote_or_backslash_char, $.escape_sequence)),
        token.immediate('"'),
      ),

    _non_quote_or_backslash_char: () => token.immediate(prec(1, /[^"\n\\]+/)),

    escape_sequence: () =>
      token.immediate(
        seq(
          "\\",
          choice(
            /[\\"nrtvbf]/, // \\ \" \n \r \t \v \b \f
            /x[0-9a-fA-F]{2}/, // hexEscape, \x00 through \xFF
            /u[0-9a-fA-F]{4}/, // unicodeEscape, \u0000 through \uFFFF
            /u\{[0-9a-fA-F]{1,6}\}/, // unicodeCodePoint, \u{0} through \u{FFFFFF}
          ),
        ),
      ),

    boolean: (_) => choice("true", "false"),

    null: (_) => "null",

    integer: (_) => {
      const hex_literal = seq(
        choice("0x", "0X"),
        /[\da-fA-F](?:_?[\da-fA-F])*/,
      );

      const oct_literal = seq(choice("0o", "0O"), /[0-7](?:_?[0-7])*/);

      const bin_literal = seq(choice("0b", "0B"), /[0-1](?:_?[0-1])*/);

      const dec_digits = /(?:_?\d)*/;
      const dec_literal = seq(/[1-9]/, optional(dec_digits));

      const dec_leading_zero_literal = seq(/\d/, optional(dec_digits));

      return token(
        choice(
          hex_literal, // hexadecimal
          oct_literal, // octal
          bin_literal, // binary
          dec_literal, // decimal
          dec_leading_zero_literal, // decimal, starting with 0
        ),
      );
    },

    // Used in arrangements of arguments to return values in asm functions
    comment: (_) =>
      token(
        choice(seq("//", /[^\n]*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),
      ),
  },
});
