test/corpus/trait.txt
============================================
trait
============================================

@interface("filled")
@interface("non-filled")
trait Filled with Deployable, Ownable, {
    const a: Int;
    b: Int;
    get fun c(arg1: String): Int {
        return 0;
    }
    override inline abstract fun d() {}
}

trait SemiCheck { abstract fun foo() }

---

(source_file
  (trait
    attributes: (trait_attributes
      (string)
      (string))
    name: (identifier)
    traits: (trait_list
      (identifier)
      (identifier))
    body: (trait_body
      (storage_constant
        name: (identifier)
        type: (type_identifier))
      (storage_variable
        name: (identifier)
        type: (type_identifier))
      (storage_function
        attributes: (function_attributes
          (get_attribute))
        name: (identifier)
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (type_identifier)))
        result: (type_identifier)
        body: (function_body
          (return_statement (integer))))
      (storage_function
        attributes: (function_attributes)
        name: (identifier)
        parameters: (parameter_list)
        body: (function_body))
    ))
  (trait
    name: (identifier)
    body: (trait_body
      (storage_function
        attributes: (function_attributes)
        name: (identifier)
        parameters: (parameter_list))
    ))
)
